Se agrega footer

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -42,3 +42,10 @@ body
 {
     padding: 1em;
 }
+
+#footer{
+    font-size: medium;
+    background-color: grey;
+    padding: 8px;
+    text-align: center;
+}
